Bug 700929 - dRenderIntent ignored for pdf pages, containing transparency
Summary: dRenderIntent ignored for pdf pages, containing transparency
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Color Management (show other bugs)
Version: 9.26
Hardware: PC Windows 10
: P4 normal
Assignee: Michael Vrhel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-31 18:20 UTC by i3v
Modified: 2019-11-21 23:20 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
Example pdf (75.34 KB, application/pdf)
2019-03-31 18:22 UTC, i3v
Details
Compressed output tiff files I get (7.02 KB, application/x-7z-compressed)
2019-03-31 18:23 UTC, i3v
Details

Note You need to log in before you can comment on or make changes to this bug.
Description i3v 2019-03-31 18:20:47 UTC
To demonstate the effect one need:

1) attached 2-page pdf. 
   The tex code is here: https://www.overleaf.com/read/bvkfbwhqzbtp .
   The only difference between the two pages is that the 2nd contains 
   small tikzpicture utilizing transparency.

2) `cmyk_des_renderintent.icc` from gs source:
   http://git.ghostscript.com/?p=ghostpdl.git;a=blob_plain;f=toolbin/color/src_color/cmyk_des_renderintent.icc;hb=d3537a54740d78c5895ec83694a07b3e4f616f61
   Based on https://www.ghostscript.com/doc/9.26/GS9_Color_Management.pdf :
   The profile cmyk des renderintent.icc is designed such that:
   * the perceptual rendering intent (0) outputs cyan only, 
   * the colorimetric intent (1) outputs magenta only 
   * and the saturation intent (2) outputs yellow only.


The following command:

>> gswin64c -sDEVICE=tiff32nc -dBATCH -dNOPAUSE -sProcessColorModel=DeviceCMYK -sColorConversionStrategy=CMYK -I. -sOutputICCProfile=cmyk_des_renderintent.icc -dRenderIntent=1 -sOutputFile=colorbar_intent1.tiff colorbar.pdf

renders both pages in magenta, as expected. 

However, same command with `-dRenderIntent=2` only makes the first page yellow.
Comment 1 i3v 2019-03-31 18:22:05 UTC
Created attachment 17286 [details]
Example pdf
Comment 2 i3v 2019-03-31 18:23:10 UTC
Created attachment 17287 [details]
Compressed output tiff files I get
Comment 3 Michael Vrhel 2019-04-12 04:55:41 UTC
Definitely something wrong going on here.  Will have a closer look next week.
Comment 4 Michael Vrhel 2019-11-21 23:20:19 UTC
Thanks for catching this.

Fixed with

https://git.ghostscript.com/?p=ghostpdl.git;a=commit;h=0129596f6cf2d090ed46f9a9c8189ab60b56735f